--- a/iniciando-react/package.json
+++ b/iniciando-react/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@material/button": "^14.0.0",
     "@mui/material": "^5.10.12",
+    "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2"
