--- a/iniciando-react/package.json
+++ b/iniciando-react/package.json
@@ -19,10 +19,12 @@
     "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
     "typescript": "^4.6.4",
-    "vite": "^3.2.0"
+    "vite": "^3.2.0",
+    "vitest": "^0.24.5"
   }
 }
