--- a/iniciando-react/package.json
+++ b/iniciando-react/package.json
@@ -14,9 +14,11 @@
     "@material/button": "^14.0.0",
     "@mui/material": "^5.10.12",
     "axios": "^1.1.3",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
