--- a/back node/package.json
+++ b/back node/package.json
@@ -13,6 +13,7 @@
     "consign": "^0.1.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mysql2": "^2.3.3"
   }
 }
