--- a/iniciando-react/package.json
+++ b/iniciando-react/package.json
@@ -12,7 +12,8 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material/button": "^14.0.0",
-    "@mui/material": "^5.10.12",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.13",
     "axios": "^1.1.3",
     "formik": "^2.2.9",
     "react": "^18.2.0",
